# rust-dns

./: Cargo.toml  README.md
decoder/: Cargo.toml
decoder/src/: lib.rs
encoder/: Cargo.toml
encoder/src/: lib.rs
packet/: Cargo.toml
packet/src/: header.rs  lib.rs  opcode.rs  packet.rs  query_classes.rs  query_types.rs  question.rs  record.rs  result_code.rs
